Fix Algolia logo alignement

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   line-height: normal;
 }
 
+.ais-PoweredBy {
+  align-items: center;
+}
+
 .ais-PoweredBy-link {
   height: 1rem;
   display: block;
